# save2read

./: Cargo.toml
src/: auth.rs  extractor.rs  lib.rs  main.rs  routes.rs  storage.rs  telegram_api.rs
templates/: archived.html  index.html  pending.html
tests/: integration_tests.rs
