[package]
name = "save4read"
version = "0.1.0"
authors = ["Kirill Gusakov <kgusakov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "3", features = ["rustls"]}
actix-rt = "1.1.1"
url = "2.2.0"
handlebars = { version = "3.5.1", features = ["dir_source"] }
scraper = "0.12.0"

sqlx = { version = "0.4.0", features = [ "runtime-actix-rustls", "sqlite", "macros" ] }
anyhow = "1.0.34"

serde = "1.0.117"
serde_json = "1.0"

env_logger = "0.8.2"
log = "0.4.11"

[dev-dependencies]
futures = "0.3.8"
actix-rt = "1.1.1"