[package]
name = "save2read"
version = "0.1.0"
authors = ["Kirill Gusakov <kgusakov@gmail.com>"]
edition = "2018"

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "save2read"
path = "src/lib.rs"


[dependencies]
actix-web = {version = "3", features = ["openssl"]}
openssl-probe = "0.1.2"
openssl = { version = "0.10", features = ["vendored"] }
actix-rt = "1.1.1"
actix-session = "0.4.0"
tokio = {version = "0.2.23", features = ["sync"]}
url = "2.2.0"
handlebars = { version = "3.5.1", features = ["dir_source"] }
scraper = "0.12.0"

sqlx = { version = "0.4.0", features = [ "runtime-actix-native-tls", "sqlite", "macros" ] }
anyhow = "1.0.34"

serde = "1.0.117"
serde_json = "1.0"

env_logger = "0.8.2"
log = "0.4.11"

rand = "0.7.3"

time = "0.2.23"

[dev-dependencies]
futures = "0.3.8"
actix-rt = "1.1.1"
actix-http = "2.2.0"
actix-service = "1.0.6"
tempdir = "0.3.7"
